[tool.poetry]
name = "repl_python3_Selenium-Top-NFT-rankings-1"
version = "0.1.0"
description = ""
authors = ["SanjayVeeraraga <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
